--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     </div>
     <div class="pump-fun">
         <img src="images/Group 4.png">
-        <h>CA: 
-            BUY <span style="color: green;"></span>FUTURE PEPE ON <span style="color: rgb(189, 9, 205); font-size: 20px;">PUMP FUN</span></h>
+        <h>CA: <span class="neon"> BUY FUTURE PEPE ON </span><span style="color: rgb(9, 205, 84); font-size: 25px;">PUMP FUN</span></h>
     </div>
     <div class="poem">
         <div class="line small">Pepe's the future,</div>
